report submit,create and view as admin

--- a/public/css/notif.css
+++ b/public/css/notif.css
@@ -428,3 +428,13 @@ display: block;
 /*.form-container .btn:hover, .open-button:hover {
   opacity: 1;
 }  */
+
+.reporter-name{
+  text-decoration: none;
+  color: #000;
+}
+
+.report-btn{
+  text-decoration: none;
+  color: #fff;
+}
