--- a/views/FollowedCampaigns.ejs
+++ b/views/FollowedCampaigns.ejs
@@ -16,7 +16,7 @@
                 <% } else { %>
                   <img src="/uploads/<%=user.profile_img%>" alt="Profile">
                   <% } %>
-              <span class="notifnav-item">DashBoard</span>
+                    <span class="notifnav-item">DashBoard</span>
             </a>
           </li>
 
@@ -41,6 +41,10 @@
             <li><a href="/unapprovedCampaigns" class="notifa">
                 <i class="fas fa-users"></i>
                 <span class="notifnav-item">Approve Campaigns</span>
+              </a></li>
+            <li><a href="/reported-campaigns" class="notifa">
+                <i class="fas fa-users"></i>
+                <span class="notifnav-item">Reported Campaigns</span>
               </a></li>
             <li><a href="/users" class="notifa">
                 <i class="fas fa-users"></i>
