--- a/views/report-form.ejs
+++ b/views/report-form.ejs
@@ -13,7 +13,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-6">
-            <form id="user" action="/profile/submit-report" method="post" enctype="multipart/form-data">
+            <form id="user" action="/profile/report/<%=campaignId%>" method="post" enctype="multipart/form-data">
               <hr />
               <p class="base"><b>Report Campaign</b></p>
               <hr />
