--- a/views/verification.ejs
+++ b/views/verification.ejs
@@ -25,7 +25,8 @@
               <img src="/images/verification/logo1.png" alt="" />
             </div>
 
-            <p>A verification mail has been sent to you</p>
+            <p class="my-2">A verification mail has been sent to you</p><br>
+            <button href="/" class="btn btn-dark"><a href="/" style="text-decoration: none; color:white;">Go Home</a></button>
           </div>
         </form>
       </div>
