--- a/views/unapproved-campaigns.ejs
+++ b/views/unapproved-campaigns.ejs
@@ -39,6 +39,10 @@
                   <i class="fas fa-users"></i>
                   <span class="notifnav-item">Approve Campaigns</span>
                 </a></li>
+              <li><a href="/reported-campaigns" class="notifa">
+                  <i class="fas fa-users"></i>
+                  <span class="notifnav-item">Reported Campaigns</span>
+                </a></li>
               <li><a href="/users" class="notifa">
                   <i class="fas fa-users"></i>
                   <span class="notifnav-item">Users</span>
@@ -73,7 +77,7 @@
 
           </div>
 
-<!-- Main Part of this page -->
+          <!-- Main Part of this page -->
 
 
           <section class="main-course">
@@ -142,7 +146,8 @@
                                     </div>
                                     <div class="col-2 checkDoc">
                                       <div class="btn-group">
-                                        <button class="btn btn-dark btn-sm dropdown-toggle unapproved-dropdown docButton buttonGameBlack"
+                                        <button
+                                          class="btn btn-dark btn-sm dropdown-toggle unapproved-dropdown docButton buttonGameBlack"
                                           type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                           Documents
                                         </button>
