--- a/views/users.ejs
+++ b/views/users.ejs
@@ -39,6 +39,10 @@
                   <i class="fas fa-users"></i>
                   <span class="notifnav-item">Approve Campaigns</span>
                 </a></li>
+              <li><a href="/reported-campaigns" class="notifa">
+                  <i class="fas fa-users"></i>
+                  <span class="notifnav-item">Reported Campaigns</span>
+                </a></li>
               <li><a href="/users" class="notifa">
                   <i class="fas fa-users"></i>
                   <span class="notifnav-item">Users</span>
